Fixed bug where hovering over button would shift the whole row of buttons

--- a/source/homepage/homepage.css
+++ b/source/homepage/homepage.css
@@ -492,7 +492,7 @@ button:hover {
 }
 
 .rating-widget button img:hover {
-  height: max(min(1em, 1vw), 60px);
+  transform: scale(1.2);
   background: radial-gradient(circle, rgb(3, 128, 237) 0%, rgba(0, 0, 0, 0) 100%);
   transition: 0.3s ease-in-out;
 }
